--- a/index.html
+++ b/index.html
@@ -2810,10 +2810,10 @@ https://bpprod7linear.akamaized.net/bpk-tv/irdeto_com_Channel_157/output/manifes
 https://bpprod7linear.akamaized.net/bpk-tv/irdeto_com_Channel_746/output/manifest.mpd
 
 
-#KODIPROP:inputstream.adaptive.license_type=clearkey
-#KODIPROP:inputstream.adaptive.license_key=https://denverisalive.in/TP/DenverKey.php?id=675
 #EXTINF:-1 tvg-id="ts675" tvg-logo="https://tatalogo.pages.dev/675.png" group-title="Kannada",Zee Kannada HD
-https://bpprod3linear.akamaized.net/bpk-tv/irdeto_com_Channel_917/output/manifest.mpd
+#EXTVLCOPT:cache=17238
+#EXTVLCOPT:http-user-agent=Lavf53.32.100
+http://mag.greatott.me/play/live.php?mac=00:1a:79:17:a5:fd&stream=155719&extension=ts
 
 
 #KODIPROP:inputstream.adaptive.license_type=clearkey
@@ -6920,7 +6920,7 @@ http://mag.greatott.me/play/live.php?mac=00:1a:79:17:a5:fd&stream=282552&extensi
 #EXTINF:-1 tvg-id="" tvg-name="KANNADA| STAR SUVARNA HD" group-title="ASIA | KANNADA",KANNADA| STAR SUVARNA HD
 #EXTVLCOPT:cache=17238
 #EXTVLCOPT:http-user-agent=Lavf53.32.100
-http://mag.greatott.me/play/live.php?mac=00:1a:79:17:a5:fd&stream=155705&extension=ts
+http://line.lion-ott.com/play/live.php?mac=00:1a:79:65:f9:0c&stream=281808&extension=ts
 #EXTINF:-1 tvg-id="" tvg-name="KANNADA| SUVARNA NEWS" group-title="ASIA | KANNADA",KANNADA| SUVARNA NEWS
 #EXTVLCOPT:cache=17238
 #EXTVLCOPT:http-user-agent=Lavf53.32.100
