--- a/index.html
+++ b/index.html
@@ -1227,10 +1227,10 @@ https://bpprod5linear.akamaized.net/bpk-tv/irdeto_com_Channel_391/output/manifes
 https://bpprod7linear.akamaized.net/bpk-tv/irdeto_com_Channel_1112/output/manifest.mpd
 
 
-#KODIPROP:inputstream.adaptive.license_type=clearkey
-#KODIPROP:inputstream.adaptive.license_key=https://denverisalive.in/TP/DenverKey.php?id=413
 #EXTINF:-1 tvg-id="ts413" tvg-logo="https://tatalogo.pages.dev/413.png" group-title="Knowledge",Nat Geo Wild HD
-https://bpprod1linear.akamaized.net/bpk-tv/irdeto_com_Channel_655/output/manifest.mpd
+#EXTVLCOPT:cache=17238
+#EXTVLCOPT:http-user-agent=Lavf53.32.100
+http://mag.greatott.me/play/live.php?mac=00:1a:79:17:a5:fd&stream=155989&extension=ts
 
 
 #KODIPROP:inputstream.adaptive.license_type=clearkey
