--- a/index.html
+++ b/index.html
@@ -4311,59 +4311,59 @@ http://tgaadi-web.tech/Tg_aadi.php?id=7382
 #EXTINF:-1 tvg-id="2033" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png"2033.jpg" group-title="Telugu", TEL: T News _HD
 http://tgaadi-web.tech/Tg_aadi.php?id=7387
 
-#EXTINF:-1 tvg-id="58861" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 1
+#EXTINF:-1 tvg-id="58861" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 1
 http://tgaadi-web.tech/Aadi.php?id=59077
-#EXTINF:-1 tvg-id="58855" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 2
+#EXTINF:-1 tvg-id="58855" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 2
 http://tgaadi-web.tech/Aadi.php?id=59071
-#EXTINF:-1 tvg-id="58858" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 3
+#EXTINF:-1 tvg-id="58858" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 3
 http://tgaadi-web.tech/Aadi.php?id=59074
-#EXTINF:-1 tvg-id="58857" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 4
+#EXTINF:-1 tvg-id="58857" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 4
 http://tgaadi-web.tech/Aadi.php?id=59073
-#EXTINF:-1 tvg-id="58860" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 5
+#EXTINF:-1 tvg-id="58860" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 5
 http://tgaadi-web.tech/Aadi.php?id=59076
-#EXTINF:-1 tvg-id="59826" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 6
+#EXTINF:-1 tvg-id="59826" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 6
 http://tgaadi-web.tech/Aadi.php?id=60032
-#EXTINF:-1 tvg-id="59827" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 7
+#EXTINF:-1 tvg-id="59827" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 7
 http://tgaadi-web.tech/Aadi.php?id=60033
-#EXTINF:-1 tvg-id="59828" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 8
+#EXTINF:-1 tvg-id="59828" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 8
 http://tgaadi-web.tech/Aadi.php?id=60034
-#EXTINF:-1 tvg-id="59829" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 9
+#EXTINF:-1 tvg-id="59829" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 9
 http://tgaadi-web.tech/Aadi.php?id=60035
-#EXTINF:-1 tvg-id="59830" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 10
+#EXTINF:-1 tvg-id="59830" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 10
 http://tgaadi-web.tech/Aadi.php?id=60036
-#EXTINF:-1 tvg-id="59821" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 11
+#EXTINF:-1 tvg-id="59821" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 11
 http://tgaadi-web.tech/Aadi.php?id=60027
-#EXTINF:-1 tvg-id="59822" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 12
+#EXTINF:-1 tvg-id="59822" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 12
 http://tgaadi-web.tech/Aadi.php?id=60028
-#EXTINF:-1 tvg-id="59823" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 13
+#EXTINF:-1 tvg-id="59823" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 13
 http://tgaadi-web.tech/Aadi.php?id=60029
-#EXTINF:-1 tvg-id="59831" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 14
+#EXTINF:-1 tvg-id="59831" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 14
 http://tgaadi-web.tech/Aadi.php?id=60037
-#EXTINF:-1 tvg-id="59825" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 15
+#EXTINF:-1 tvg-id="59825" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 15
 http://tgaadi-web.tech/Aadi.php?id=60031
-#EXTINF:-1 tvg-id="59832" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 16
+#EXTINF:-1 tvg-id="59832" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 16
 http://tgaadi-web.tech/Aadi.php?id=60038
-#EXTINF:-1 tvg-id="59833" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 17
+#EXTINF:-1 tvg-id="59833" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 17
 http://tgaadi-web.tech/Aadi.php?id=60039
-#EXTINF:-1 tvg-id="59834" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 18
+#EXTINF:-1 tvg-id="59834" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 18
 http://tgaadi-web.tech/Aadi.php?id=60040
-#EXTINF:-1 tvg-id="59835" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 19
+#EXTINF:-1 tvg-id="59835" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 19
 http://tgaadi-web.tech/Aadi.php?id=60041
-#EXTINF:-1 tvg-id="59836" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 20
+#EXTINF:-1 tvg-id="59836" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 20
 http://tgaadi-web.tech/Aadi.php?id=60042
-#EXTINF:-1 tvg-id="59837" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 21
+#EXTINF:-1 tvg-id="59837" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 21
 http://tgaadi-web.tech/Aadi.php?id=60043
-#EXTINF:-1 tvg-id="59838" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 22
+#EXTINF:-1 tvg-id="59838" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 22
 http://tgaadi-web.tech/Aadi.php?id=60044
-#EXTINF:-1 tvg-id="59839" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 23
+#EXTINF:-1 tvg-id="59839" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 23
 http://tgaadi-web.tech/Aadi.php?id=60045
-#EXTINF:-1 tvg-id="59840" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 24
+#EXTINF:-1 tvg-id="59840" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 24
 http://tgaadi-web.tech/Aadi.php?id=60046
-#EXTINF:-1 tvg-id="59841" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 25
+#EXTINF:-1 tvg-id="59841" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 25
 http://tgaadi-web.tech/Aadi.php?id=60047
-#EXTINF:-1 tvg-id="59842" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 26
+#EXTINF:-1 tvg-id="59842" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 26
 http://tgaadi-web.tech/Aadi.php?id=60048
-#EXTINF:-1 tvg-id="59843" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live" | TELUGU MOVIES 27
+#EXTINF:-1 tvg-id="59843" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu Movies Live",TELUGU MOVIES 27
 http://tgaadi-web.tech/Aadi.php?id=60049
 #EXTINF:-1 tvg-id="57914" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" group-title="Telugu", BIGG BOSS 24x7 (Telugu)
 http://tgaadi-web.tech/Aadi.php?id=58130
