--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@ https://bpprod4catchup.akamaized.net/bpk-tv/irdeto_com_Channel_209/output/manife
 https://bpprod2catchup.akamaized.net/bpk-tv/irdeto_com_Channel_196/output/manifest.mpd
 
 
-#KODIPROP:inputstream.adaptive.license_type=clearkey
-#KODIPROP:inputstream.adaptive.license_key=https://denverisalive.in/TP/DenverKey.php?id=63
+
 #EXTINF:-1 tvg-id="63" tvg-logo="https://tatalogo.pages.dev/63.png" group-title="Entertainment",Zee TV HD
-https://bpprod2catchup.akamaized.net/bpk-tv/irdeto_com_Channel_258/output/manifest.mpd
+#EXTVLCOPT:cache=17238
+#EXTVLCOPT:http-user-agent=Lavf53.32.100
+http://mag.greatott.me/play/live.php?mac=00:1a:79:17:a5:fd&stream=155974&extension=ts
 
 
 #KODIPROP:inputstream.adaptive.license_type=clearkey
